adding zaf client lib

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>React starter app</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
+    <script type="text/javascript" src="https://assets.zendesk.com/apps/sdk/2.0/zaf_sdk.js"></script>
 </head>
 <body>
 <div id="app"></div>
